# LifeMonitor

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: README.md  eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: metrics-data.ts  metrics.tsx
apps/desktop/src/lib/: time.test.ts  time.ts
apps/desktop/src/services/: notifications.ts  platform.ts  repository.ts  useLifeMonitor.ts
