[package]
name = "lifemonitor"
version = "0.1.0"
description = "A local desktop timer and activity timeline for work and rest."
authors = ["LifeMonitor"]
edition = "2021"

[lib]
name = "lifemonitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
